fix bug on mobile / input width

--- a/packages/web-components/src/components/va-memorable-date/va-memorable-date.scss
+++ b/packages/web-components/src/components/va-memorable-date/va-memorable-date.scss
@@ -38,7 +38,7 @@
   .usa-form-group--month-select {
     width: 100%;
   }
-  .uswds-usa-form-group--month {
+  .uswds-usa-form-group--month.usa-form-group--select {
     flex: 0 1 50%;
     width: 50%;
   }
